Проект по анализу базы данных

--- a/Аналитика_базы_данных/Finish_files/Справка по рекламациям за период.ipynb
+++ b/Аналитика_базы_данных/Finish_files/Справка по рекламациям за период.ipynb
@@ -58,7 +58,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_c = df[df['Месяц регистрации'] == \"сентябрь\"].dropna(subset=['Дата поступления сообщения в ОТК'])"
+    "df_c = df[df[\"Месяц регистрации\"] == \"сентябрь\"].dropna(subset=[\"Период выявления дефекта (отказа)\"])"
    ]
   },
   {
