--- a/Анализ_браковок/4.1 ТНО и не-ТНО по месяцам года_trening.ipynb
+++ b/Анализ_браковок/4.1 ТНО и не-ТНО по месяцам года_trening.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from datetime import date\n",
+    "from datetime import date, datetime\n",
     "import matplotlib.pyplot as plt\n",
     "import warnings\n",
     "\n",
