Проект по анализу базы рекламаций

--- a/Аналитика_базы_данных/Finish_files/Справка по рекламациям за период.ipynb
+++ b/Аналитика_базы_данных/Finish_files/Справка по рекламациям за период.ipynb
@@ -49,6 +49,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Номер строки датафрейма (индекс строки) делаем как в базе данных\n",
     "df.index = df.index + 3"
    ]
   },
@@ -58,55 +59,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_c = df[df[\"Месяц регистрации\"] == \"сентябрь\"].dropna(subset=[\"Период выявления дефекта (отказа)\"])"
+    "# Удаляем строки в которых нет информации \n",
+    "df_c = df.dropna(subset=[\"Период выявления дефекта (отказа)\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index([1037, 1038, 1039, 1040, 1041, 1042, 1043, 1044, 1046, 1047, 1048, 1049,\n",
-       "       1050, 1051, 1052, 1053, 1054, 1055, 1056, 1057, 1058, 1059, 1060, 1061,\n",
-       "       1062, 1063, 1064, 1065, 1066, 1067, 1068, 1069, 1070, 1071, 1072, 1073,\n",
-       "       1074, 1075, 1076, 1079, 1080, 1081, 1082, 1083, 1084, 1085, 1086, 1087,\n",
-       "       1088, 1097, 1098, 1099, 1100, 1101, 1102, 1103, 1104, 1105, 1106, 1107,\n",
-       "       1108, 1109, 1110, 1111, 1112, 1114, 1115, 1116, 1120, 1121, 1122, 1123,\n",
-       "       1124],\n",
-       "      dtype='int64')"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df_c.index"
+    "# Номер последней строки базы данных с информацией по рекламациям\n",
+    "df_c.index[-1]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1124"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Крайняя строка базы данных по которой формировался предыдущий отчет: 1087\n",
-    "# Диапазон строк базы данных по которым формируется отчет: 1088 - 1124"
+    "# Строка базы данных по которой формировался предыдущий отчет: 1146\n",
+    "# Диапазон строк базы данных по которым формируется отчет: 1147 - 1249"
    ]
   },
   {
@@ -116,13 +90,13 @@
    "outputs": [],
    "source": [
     "# Формируем отчет за период \n",
-    "df_res = df_c.loc[1088:].groupby(\n",
+    "df_res = df_c.loc[1147:].groupby(\n",
     "    [\n",
     "        \"Период выявления дефекта (отказа)\", \n",
     "        \"Наименование изделия\", \n",
     "        \"Обозначение изделия\"\n",
     "    ]\n",
-    ")[\"Заявленный дефект изделия\"].agg(['count', 'unique']).rename(columns={'count': 'Количество', 'unique': 'Дефект'})"
+    ")[\"Месяц регистрации\"].agg('count').to_frame().rename(columns={\"Месяц регистрации\": \"Количество\"})"
    ]
   },
   {
@@ -154,69 +128,132 @@
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th>Количество</th>\n",
-       "      <th>Дефект</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Период выявления дефекта (отказа)</th>\n",
        "      <th>Наименование изделия</th>\n",
        "      <th>Обозначение изделия</th>\n",
        "      <th></th>\n",
-       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>ММЗ - АСП</th>\n",
-       "      <th>водяной насос</th>\n",
-       "      <th>245-1307010-A1-11</th>\n",
-       "      <td>1</td>\n",
-       "      <td>[течь]</td>\n",
+       "      <th>Гомсельмаш - эксплуатация</th>\n",
+       "      <th>компрессор</th>\n",
+       "      <th>5336-3509012-05</th>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th rowspan=\"2\" valign=\"top\">ММЗ - эксплуатация</th>\n",
-       "      <th rowspan=\"2\" valign=\"top\">водяной насос</th>\n",
+       "      <th rowspan=\"14\" valign=\"top\">ММЗ - эксплуатация</th>\n",
+       "      <th rowspan=\"8\" valign=\"top\">водяной насос</th>\n",
        "      <th>240-1307010-А1</th>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>245-1307010-А1</th>\n",
        "      <td>1</td>\n",
-       "      <td>[течь ОЖ]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>245-1307010-А1-11</th>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>260-1307116-02</th>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>260-1307116-05</th>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>260-1307116-06</th>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>260-1307116-15</th>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3LD-1307010-Б</th>\n",
        "      <td>1</td>\n",
-       "      <td>[Сорван вентилятор с посадочного места]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th rowspan=\"2\" valign=\"top\">ЯМЗ - эксплуатация</th>\n",
+       "      <th rowspan=\"2\" valign=\"top\">компрессор</th>\n",
+       "      <th>А29.05.000-БЗА</th>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ПК 225-К-01</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"3\" valign=\"top\">турбокомпрессор</th>\n",
+       "      <th>ТКР 6-01.01</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ТКР 6.1-09.03</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ТКР 7-02.08</th>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>центробежный масляный фильтр</th>\n",
+       "      <th>260-1028010</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ПАЗ - эксплуатация</th>\n",
+       "      <th>компрессор</th>\n",
+       "      <th>ПК 225-К-01</th>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>УРАЛ - эксплуатация</th>\n",
+       "      <th>компрессор</th>\n",
+       "      <th>5336-3509012-10</th>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ЯМЗ - эксплуатация</th>\n",
        "      <th>водяной насос</th>\n",
        "      <th>КБПА 451363.21\\n(536.1307010-21)</th>\n",
-       "      <td>21</td>\n",
-       "      <td>[течь ОЖ]</td>\n",
+       "      <td>41</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>компрессор</th>\n",
-       "      <th>5340.3509015-21\\n(ПК225 КБПА 064.700)</th>\n",
+       "      <th>запчасть</th>\n",
+       "      <th>турбокомпрессор</th>\n",
+       "      <th>ТКР 10-03.01</th>\n",
        "      <td>1</td>\n",
-       "      <td>[не качает]</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                                                              Количество  \\\n",
-       "Период выявления дефекта (отказа) Наименование изделия Обозначение изделия                                 \n",
-       "ММЗ - АСП                         водяной насос        245-1307010-A1-11                               1   \n",
-       "ММЗ - эксплуатация                водяной насос        240-1307010-А1                                  1   \n",
-       "                                                       3LD-1307010-Б                                   1   \n",
-       "ЯМЗ - эксплуатация                водяной насос        КБПА 451363.21\\n(536.1307010-21)               21   \n",
-       "                                  компрессор           5340.3509015-21\\n(ПК225 КБПА 064.700)           1   \n",
-       "\n",
-       "                                                                                                                               Дефект  \n",
-       "Период выявления дефекта (отказа) Наименование изделия Обозначение изделия                                                             \n",
-       "ММЗ - АСП                         водяной насос        245-1307010-A1-11                                                       [течь]  \n",
-       "ММЗ - эксплуатация                водяной насос        240-1307010-А1                                                       [течь ОЖ]  \n",
-       "                                                       3LD-1307010-Б                          [Сорван вентилятор с посадочного места]  \n",
-       "ЯМЗ - эксплуатация                водяной насос        КБПА 451363.21\\n(536.1307010-21)                                     [течь ОЖ]  \n",
-       "                                  компрессор           5340.3509015-21\\n(ПК225 КБПА 064.700)                              [не качает]  "
+       "                                                                                                 Количество\n",
+       "Период выявления дефекта (отказа) Наименование изделия         Обозначение изделия                         \n",
+       "Гомсельмаш - эксплуатация         компрессор                   5336-3509012-05                            4\n",
+       "ММЗ - эксплуатация                водяной насос                240-1307010-А1                             4\n",
+       "                                                               245-1307010-А1                             1\n",
+       "                                                               245-1307010-А1-11                          7\n",
+       "                                                               260-1307116-02                            16\n",
+       "                                                               260-1307116-05                             4\n",
+       "                                                               260-1307116-06                             4\n",
+       "                                                               260-1307116-15                             4\n",
+       "                                                               3LD-1307010-Б                              1\n",
+       "                                  компрессор                   А29.05.000-БЗА                             6\n",
+       "                                                               ПК 225-К-01                                1\n",
+       "                                  турбокомпрессор              ТКР 6-01.01                                1\n",
+       "                                                               ТКР 6.1-09.03                              1\n",
+       "                                                               ТКР 7-02.08                                2\n",
+       "                                  центробежный масляный фильтр 260-1028010                                1\n",
+       "ПАЗ - эксплуатация                компрессор                   ПК 225-К-01                                2\n",
+       "УРАЛ - эксплуатация               компрессор                   5336-3509012-10                            2\n",
+       "ЯМЗ - эксплуатация                водяной насос                КБПА 451363.21\\n(536.1307010-21)          41\n",
+       "запчасть                          турбокомпрессор              ТКР 10-03.01                               1"
       ]
      },
      "execution_count": 8,
@@ -248,7 +285,7 @@
     "    encoding=\"utf-8\",\n",
     ") as f:\n",
     "    print(\n",
-    "        f\"\\n\\n\\tСправка по поступившим рекламациям за период 03.09.24 - 09.09.24\",\n",
+    "        f\"\\n\\n\\tСправка по поступившим рекламациям за период 08.10.24 - 22.10.24\",\n",
     "        file=f,\n",
     "    )\n",
     "    f.write(df_res.to_string())\n",
