--- a/Анализ_браковок/4.1 ТНО и не-ТНО по месяцам года_trening.ipynb
+++ b/Анализ_браковок/4.1 ТНО и не-ТНО по месяцам года_trening.ipynb
@@ -704,7 +704,7 @@
     "    # сортируем по убыванию по сумме \"Сумма_по_акту\"\n",
     "    pivot.sort_values(by=\"Сумма_по_акту\", ascending=False, inplace=True)\n",
     "\n",
-    "    # считаем итоговую сумму по столбцу \"Сумма_по_акту\" \n",
+    "    # считаем итоговую сумму по столбцу \"Сумма_по_акту\"\n",
     "    sum_col = pivot[\"Сумма_по_акту\"].sum()\n",
     "    # в конец датафрейма добавляем строку с разделительными черточками\n",
     "    pivot.loc[(\"\", \"\", \"\", f\"{'-'*16}\")] = [\"\", f\"{'-'*10}\"]\n",
@@ -1775,7 +1775,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.2 ('brakoves_venv': venv)",
+   "display_name": "brakoves_venv",
    "language": "python",
    "name": "python3"
   },
@@ -1791,12 +1791,7 @@
    "pygments_lexer": "ipython3",
    "version": "3.8.2"
   },
-  "orig_nbformat": 4,
-  "vscode": {
-   "interpreter": {
-    "hash": "14ce5b9f69b9a5a308c11971d4f0ae9d97272014bb37512f4ca0bc9bcb70cb5a"
-   }
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
