--- a/Резервное_копирование/Работа с файлами и каталогами_конспект.ipynb
+++ b/Резервное_копирование/Работа с файлами и каталогами_конспект.ipynb
@@ -7,7 +7,8 @@
     "## Архивирование файлов и каталогов\n",
     "\n",
     "* [Архивирование файлов из разных каталогов](#t_1)\n",
-    "* [Архивирование файлов и каталогов из разных каталогов](#t_2)"
+    "* [Архивирование файлов и каталогов из разных каталогов](#t_2)\n",
+    "* [Удаление старых архивов за исключением двух самых последних](#t_3)"
    ]
   },
   {
@@ -137,6 +138,47 @@
     "shutil.rmtree(temp_dir)\n",
     "\n",
     "print(f\"Архив создан: {archive_path}.zip\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='t_3'></a>\n",
+    "### Удаление старых архивов за исключением двух самых последних\n",
+    "\n",
+    "Программа сортирует архивы .zip по времени последней модификации, а затем удаляет все архивы, кроме двух самых последних."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
+    "def delete_old_zips(directory):\n",
+    "    # Находим все архивы .zip в каталоге по указанному пути\n",
+    "    zip_files = [os.path.join(directory, filename) for filename in os.listdir(directory) if filename.endswith(\".zip\")]\n",
+    "    # Сортируем по возрастанию времени внесения изменений в файл .zip архивов\n",
+    "    zip_files.sort(key=lambda x: os.path.getmtime(x))\n",
+    "    # Если в папке меньше или равно двум архивам, выводится сообщение, что недостаточно архивов для удаления.\n",
+    "    if len(zip_files) > 2:\n",
+    "        # Для всех архивов из списка кроме двух самых последних\n",
+    "        for zip_file in zip_files[:-2]:\n",
+    "            try:\n",
+    "                os.remove(zip_file)  # удаляем архив\n",
+    "                print(f\"Архив {zip_file} удален.\")\n",
+    "            except FileNotFoundError:\n",
+    "                print(f\"Архив {zip_file} не найден.\")\n",
+    "            except Exception as e:\n",
+    "                print(f\"Ошибка удаления архива: {e}\")\n",
+    "    else:\n",
+    "        print(\"В каталоге недостаточно архивов для удаления.\")\n",
+    "\n",
+    "directory = \"/path/to/directory\"\n",
+    "delete_old_zips(directory)"
    ]
   }
  ],
