Изменены № строк при копировании на лист Гарантия

--- a/Копирование_отгрузки/Временная_папка/temp_1.ipynb
+++ b/Копирование_отгрузки/Временная_папка/temp_1.ipynb
@@ -117,6 +117,7 @@
     "    \"\"\"\n",
     "\n",
     "    def copy_garant(self):\n",
+    "    # ----------------- сохраняем значения суммарной отгрузки по изделиям в списки и временные переменные -----------------\n",
     "        # модулем xlwings в таблице ОТК фиксируем значения в ячейках, где используются формулы\n",
     "        excel_app = xlwings.App(visible=False)\n",
     "        excel_book = excel_app.books.open(file_otk)\n",
@@ -131,49 +132,39 @@
     "        # ТКР = 23, ПК = 43, ВН = 63, МН = 80, ГП = 89, ЦМФ = 103, ХХХ = 112, YYY = 119, коромысло = 122, штанга = 123\n",
     "        num_strok = (23, 43, 63, 80, 89, 103, 112, 119, 122, 123)\n",
     "\n",
-    "# ----------------- сохраняем значения суммарной отгрузки по изделиям в списки и временные переменные -----------------\n",
     "        # список значений суммарной отгрузки по изделиям на АСП\n",
     "        asp = list(ws1.cell(i, 22).value for i in num_strok)\n",
     "        # список значений отгрузки по изделиям в ЗАПЧАСТЬ\n",
     "        zap = list(ws1.cell(i, 24).value for i in num_strok)\n",
     "\n",
-    "        # список значений отгрузки по изделиям на ММЗ\n",
-    "        mmz = list(ws1.cell(i, 3).value for i in num_strok)\n",
+    "        # список значений отгрузки по изделиям на ММЗ (без ХХХ = 112, YYY = 119)\n",
+    "        mmz = list(ws1.cell(i, 3).value for i in (23, 43, 63, 80, 89, 103, 122, 123))\n",
     "\n",
-    "        maz = ws1.cell(row=37, column=4).value  # копируем значения по МАЗ\n",
-    "        # копируем значения по ГОМСЕЛЬМАШ\n",
-    "        gomsel = ws1.cell(row=37, column=7).value\n",
-    "        ural = ws1.cell(row=37, column=12).value  # копируем значения по УРАЛ\n",
-    "        kamaz = ws1.cell(row=37, column=10).value  # копируем значения по КАМАЗ\n",
-    "        # копируем значения по РОСТСЕЛЬМАШ (ПК)\n",
-    "        rostsel_1 = ws1.cell(row=37, column=11).value\n",
-    "        # копируем значения по РОСТСЕЛЬМАШ (ТКР)\n",
-    "        rostsel_2 = ws1.cell(row=20, column=11).value\n",
-    "        # копируем значения по РОСТСЕЛЬМАШ (ВН)\n",
-    "        rostsel_3 = ws1.cell(row=52, column=11).value\n",
-    "        # копируем значения по РОСТСЕЛЬМАШ (МН)\n",
-    "        rostsel_4 = ws1.cell(row=66, column=11).value\n",
-    "        # копируем значения по ЯМЗ (ПК)\n",
-    "        ymz_1 = ws1.cell(row=37, column=17).value\n",
-    "        # копируем значения по ЯМЗ (ВН)\n",
-    "        ymz_2 = ws1.cell(row=52, column=17).value\n",
-    "        # копируем значения по ЯМЗ (МН)\n",
-    "        ymz_3 = ws1.cell(row=66, column=17).value\n",
-    "        belaz = ws1.cell(row=37, column=5).value  # копируем значения по БелАЗ\n",
-    "        mzkt = ws1.cell(row=37, column=6).value  # копируем значения по МЗКТ\n",
-    "        kraz = ws1.cell(row=37, column=14).value  # копируем значения по КрАЗ\n",
-    "        # копируем значения по ХТЗ Белгород\n",
-    "        htz_b = ws1.cell(row=37, column=9).value\n",
-    "        bzkt = ws1.cell(row=37, column=13).value  # копируем значения по БЗКТ\n",
-    "        # копируем значения по САЛЕО-Гомель\n",
-    "        saleo = ws1.cell(row=89, column=8).value\n",
-    "        # копируем значения по ПТЗ С-Петербург\n",
-    "        ptz = ws1.cell(row=37, column=15).value\n",
-    "        csdm = ws1.cell(row=37, column=16).value  # копируем значения по ЧСДМ\n",
-    "        tula = ws1.cell(row=37, column=18).value  # копируем значения по Туле\n",
-    "        baz = ws1.cell(row=37, column=21).value  # копируем значения по БАЗ\n",
-    "        # копируем значения по ХТЗ Харьков\n",
-    "        htz_h = ws1.cell(row=37, column=20).value\n",
+    "        maz = ws1.cell(row=43, column=4).value     # отгрузка на МАЗ\n",
+    "        gomsel = ws1.cell(row=43, column=5).value  # ГОМСЕЛЬМАШ\n",
+    "        mzkt = ws1.cell(row=43, column=6).value    # МЗКТ\n",
+    "        belaz = ws1.cell(row=43, column=7).value   # БелАЗ\n",
+    "        saleo = ws1.cell(row=103, column=8).value   # САЛЕО-Гомель\n",
+    "        # -------------------------------------------------------------- здесь закончил ----------------------------------\n",
+    "        \n",
+    "        ural = ws1.cell(row=37, column=12).value   # УРАЛ\n",
+    "        kamaz = ws1.cell(row=37, column=10).value  # КАМАЗ\n",
+    "        rostsel_1 = ws1.cell(row=37, column=11).value  # РОСТСЕЛЬМАШ (ПК)\n",
+    "        rostsel_2 = ws1.cell(row=20, column=11).value  # РОСТСЕЛЬМАШ (ТКР)\n",
+    "        rostsel_3 = ws1.cell(row=52, column=11).value  # РОСТСЕЛЬМАШ (ВН)\n",
+    "        rostsel_4 = ws1.cell(row=66, column=11).value  # РОСТСЕЛЬМАШ (МН)\n",
+    "        ymz_1 = ws1.cell(row=37, column=17).value  # ЯМЗ (ПК)\n",
+    "        ymz_2 = ws1.cell(row=52, column=17).value  # ЯМЗ (ВН)\n",
+    "        ymz_3 = ws1.cell(row=66, column=17).value  # ЯМЗ (МН)\n",
+    "        kraz = ws1.cell(row=37, column=14).value   # КрАЗ\n",
+    "        htz_b = ws1.cell(row=37, column=9).value   # ХТЗ Белгород\n",
+    "        bzkt = ws1.cell(row=37, column=13).value   # БЗКТ\n",
+    "        \n",
+    "        ptz = ws1.cell(row=37, column=15).value    # ПТЗ С-Петербург\n",
+    "        csdm = ws1.cell(row=37, column=16).value   # ЧСДМ\n",
+    "        tula = ws1.cell(row=37, column=18).value   # Туле\n",
+    "        baz = ws1.cell(row=37, column=21).value    # БАЗ\n",
+    "        htz_h = ws1.cell(row=37, column=20).value  # ХТЗ Харьков\n",
     "\n",
     "        wb1.close()\n",
     "\n",
