Изменен порядок составления справки-отчета

--- a/Аналитика_базы_данных/Working_files/Справка по рекламациям за период.ipynb
+++ b/Аналитика_базы_данных/Working_files/Справка по рекламациям за период.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,13 +19,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "year_now = date.today().year  # текущий год\n",
     "# имя файла с учетом текущего года\n",
-    "file = \"//Server/otk/1 ГАРАНТИЯ на сервере/\" + str(year_now) + \"-2019_ЖУРНАЛ УЧЁТА.xlsm\"\n",
+    "# file = \"//Server/otk/1 ГАРАНТИЯ на сервере/\" + str(year_now) + \"-2019_ЖУРНАЛ УЧЁТА.xlsm\"\n",
+    "file = f\"{str(year_now)}-2019_ЖУРНАЛ УЧЁТА.xlsm\"\n",
+    "\n",
     "\n",
     "df = pd.read_excel(\n",
     "            file,\n",
@@ -39,7 +41,7 @@
     "                \"Заводской номер изделия\",\n",
     "                \"Дата изготовления изделия\",\n",
     "                \"Пробег, наработка\",\n",
-    "                \"Заявленный дефект изделия\", \n",
+    "                \"Заявленный дефект изделия\",\n",
     "                \"Количество предъявленных изделий\"\n",
     "            ],\n",
     "            header=1,\n",
@@ -48,23 +50,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "df.rename(\n",
     "    columns={\n",
-    "        \"Период выявления дефекта (отказа)\": \"Период выявления\", \n",
-    "        \"Количество предъявленных изделий\": \"Количество\", \n",
+    "        \"Период выявления дефекта (отказа)\": \"Период выявления\",\n",
+    "        \"Количество предъявленных изделий\": \"Количество\",\n",
     "        \"Заявленный дефект изделия\": \"Заявленный дефект\"\n",
-    "    }, \n",
+    "    },\n",
     "    inplace=True\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,17 +76,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Удаляем строки в которых нет информации \n",
+    "# Удаляем строки в которых нет информации\n",
     "df_c = df.dropna(subset=[\"Период выявления\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -230,88 +232,88 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>167</th>\n",
+       "      <th>202</th>\n",
        "      <td>январь</td>\n",
-       "      <td>NaT</td>\n",
-       "      <td>ММЗ - эксплуатация</td>\n",
+       "      <td>2025-01-23</td>\n",
+       "      <td>ЯМЗ - эксплуатация</td>\n",
+       "      <td>компрессор</td>\n",
+       "      <td>ПК 225</td>\n",
+       "      <td>00114</td>\n",
+       "      <td>04.22</td>\n",
+       "      <td>2372 км</td>\n",
+       "      <td>недостаточно производительности</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>203</th>\n",
+       "      <td>январь</td>\n",
+       "      <td>2025-01-23</td>\n",
+       "      <td>ЯМЗ - эксплуатация</td>\n",
        "      <td>водяной насос</td>\n",
-       "      <td>260-1307116-06</td>\n",
+       "      <td>КБПА 451363.21</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2500 м/ч</td>\n",
+       "      <td>36642 км</td>\n",
        "      <td>течь</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>168</th>\n",
+       "      <th>204</th>\n",
        "      <td>январь</td>\n",
-       "      <td>NaT</td>\n",
-       "      <td>ММЗ - АСП</td>\n",
-       "      <td>масляный насос</td>\n",
-       "      <td>3LD-1403010</td>\n",
+       "      <td>2025-01-23</td>\n",
+       "      <td>ЯМЗ - эксплуатация</td>\n",
+       "      <td>водяной насос</td>\n",
+       "      <td>КБПА 451363.21</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>ПСИ</td>\n",
-       "      <td>посторонние частицы, загрязнение внутренней по...</td>\n",
-       "      <td>113</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>169</th>\n",
-       "      <td>январь</td>\n",
-       "      <td>NaT</td>\n",
-       "      <td>ММЗ - АСП</td>\n",
-       "      <td>масляный насос</td>\n",
-       "      <td>3LD-1403010</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>ПСИ</td>\n",
-       "      <td>посторонние частицы, загрязнение внутренней по...</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>170</th>\n",
-       "      <td>январь</td>\n",
-       "      <td>2025-01-20</td>\n",
-       "      <td>УРАЛ - эксплуатация</td>\n",
-       "      <td>компрессор</td>\n",
-       "      <td>5336-3509012</td>\n",
-       "      <td>06438</td>\n",
-       "      <td>09.23</td>\n",
-       "      <td>930 м/ч</td>\n",
-       "      <td>заклинивание</td>\n",
+       "      <td>66240 км</td>\n",
+       "      <td>течь</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>171</th>\n",
+       "      <th>205</th>\n",
        "      <td>январь</td>\n",
-       "      <td>2025-01-21</td>\n",
-       "      <td>УРАЛ - эксплуатация</td>\n",
-       "      <td>компрессор</td>\n",
-       "      <td>5336-3509012-10</td>\n",
-       "      <td>02583</td>\n",
-       "      <td>04.24</td>\n",
-       "      <td>0 км</td>\n",
-       "      <td>перестал качать</td>\n",
+       "      <td>2025-01-23</td>\n",
+       "      <td>ЯМЗ - эксплуатация</td>\n",
+       "      <td>водяной насос</td>\n",
+       "      <td>КБПА 451363.21</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>66365 км</td>\n",
+       "      <td>течь</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>206</th>\n",
+       "      <td>январь</td>\n",
+       "      <td>2025-01-24</td>\n",
+       "      <td>ЯМЗ - эксплуатация</td>\n",
+       "      <td>водяной насос</td>\n",
+       "      <td>КБПА 451363.21</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>30916 км</td>\n",
+       "      <td>течь</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>169 rows × 10 columns</p>\n",
+       "<p>204 rows × 10 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "    Месяц регистрации Дата поступления сообщения в ОТК     Период выявления  \\\n",
-       "3              январь                       2025-01-08            ММЗ - АСП   \n",
-       "4              январь                              NaT             запчасть   \n",
-       "5              январь                              NaT             запчасть   \n",
-       "6              январь                              NaT   ММЗ - эксплуатация   \n",
-       "7              январь                              NaT   ММЗ - эксплуатация   \n",
-       "..                ...                              ...                  ...   \n",
-       "167            январь                              NaT   ММЗ - эксплуатация   \n",
-       "168            январь                              NaT            ММЗ - АСП   \n",
-       "169            январь                              NaT            ММЗ - АСП   \n",
-       "170            январь                       2025-01-20  УРАЛ - эксплуатация   \n",
-       "171            январь                       2025-01-21  УРАЛ - эксплуатация   \n",
+       "    Месяц регистрации Дата поступления сообщения в ОТК    Период выявления  \\\n",
+       "3              январь                       2025-01-08           ММЗ - АСП   \n",
+       "4              январь                              NaT            запчасть   \n",
+       "5              январь                              NaT            запчасть   \n",
+       "6              январь                              NaT  ММЗ - эксплуатация   \n",
+       "7              январь                              NaT  ММЗ - эксплуатация   \n",
+       "..                ...                              ...                 ...   \n",
+       "202            январь                       2025-01-23  ЯМЗ - эксплуатация   \n",
+       "203            январь                       2025-01-23  ЯМЗ - эксплуатация   \n",
+       "204            январь                       2025-01-23  ЯМЗ - эксплуатация   \n",
+       "205            январь                       2025-01-23  ЯМЗ - эксплуатация   \n",
+       "206            январь                       2025-01-24  ЯМЗ - эксплуатация   \n",
        "\n",
        "    Наименование изделия Обозначение изделия Заводской номер изделия  \\\n",
        "3          водяной насос      260-1307116-15                     б/н   \n",
@@ -320,11 +322,11 @@
        "6          водяной насос      240-1307010-А1                     б/н   \n",
        "7          водяной насос      240-1307010-А1                     б/н   \n",
        "..                   ...                 ...                     ...   \n",
-       "167        водяной насос      260-1307116-06                     NaN   \n",
-       "168       масляный насос         3LD-1403010                     NaN   \n",
-       "169       масляный насос         3LD-1403010                     NaN   \n",
-       "170           компрессор        5336-3509012                   06438   \n",
-       "171           компрессор     5336-3509012-10                   02583   \n",
+       "202           компрессор             ПК 225                    00114   \n",
+       "203        водяной насос     КБПА 451363.21                      NaN   \n",
+       "204        водяной насос     КБПА 451363.21                      NaN   \n",
+       "205        водяной насос     КБПА 451363.21                      NaN   \n",
+       "206        водяной насос     КБПА 451363.21                      NaN   \n",
        "\n",
        "    Дата изготовления изделия Пробег, наработка  \\\n",
        "3                         б/д               ПСИ   \n",
@@ -333,29 +335,29 @@
        "6                         NaN               NaN   \n",
        "7                         NaN               NaN   \n",
        "..                        ...               ...   \n",
-       "167                       NaN          2500 м/ч   \n",
-       "168                       NaN               ПСИ   \n",
-       "169                       NaN               ПСИ   \n",
-       "170                     09.23           930 м/ч   \n",
-       "171                     04.24              0 км   \n",
+       "202                     04.22           2372 км   \n",
+       "203                       NaN          36642 км   \n",
+       "204                       NaN          66240 км   \n",
+       "205                       NaN          66365 км   \n",
+       "206                       NaN          30916 км   \n",
        "\n",
-       "                                     Заявленный дефект  Количество  \n",
-       "3                     течь ОЖ, раковина корпуса насоса           1  \n",
-       "4            низкая производительность\\n(около 7 атм.)           1  \n",
-       "5                     перепускает в систему охлаждения           1  \n",
-       "6                                                 течь           1  \n",
-       "7                                                 течь           1  \n",
-       "..                                                 ...         ...  \n",
-       "167                                               течь           1  \n",
-       "168  посторонние частицы, загрязнение внутренней по...         113  \n",
-       "169  посторонние частицы, загрязнение внутренней по...           2  \n",
-       "170                                       заклинивание           1  \n",
-       "171                                    перестал качать           1  \n",
+       "                             Заявленный дефект  Количество  \n",
+       "3             течь ОЖ, раковина корпуса насоса           1  \n",
+       "4    низкая производительность\\n(около 7 атм.)           1  \n",
+       "5             перепускает в систему охлаждения           1  \n",
+       "6                                         течь           1  \n",
+       "7                                         течь           1  \n",
+       "..                                         ...         ...  \n",
+       "202            недостаточно производительности           1  \n",
+       "203                                       течь           1  \n",
+       "204                                       течь           1  \n",
+       "205                                       течь           1  \n",
+       "206                                       течь           1  \n",
        "\n",
-       "[169 rows x 10 columns]"
+       "[204 rows x 10 columns]"
       ]
      },
-     "execution_count": 172,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -374,22 +376,22 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Index: 169 entries, 3 to 171\n",
+      "Index: 204 entries, 3 to 206\n",
       "Data columns (total 10 columns):\n",
       " #   Column                            Non-Null Count  Dtype         \n",
       "---  ------                            --------------  -----         \n",
-      " 0   Месяц регистрации                 169 non-null    object        \n",
-      " 1   Дата поступления сообщения в ОТК  82 non-null     datetime64[ns]\n",
-      " 2   Период выявления                  169 non-null    object        \n",
-      " 3   Наименование изделия              169 non-null    object        \n",
-      " 4   Обозначение изделия               169 non-null    object        \n",
-      " 5   Заводской номер изделия           142 non-null    object        \n",
-      " 6   Дата изготовления изделия         31 non-null     object        \n",
-      " 7   Пробег, наработка                 69 non-null     object        \n",
-      " 8   Заявленный дефект                 169 non-null    object        \n",
-      " 9   Количество                        169 non-null    int16         \n",
+      " 0   Месяц регистрации                 204 non-null    object        \n",
+      " 1   Дата поступления сообщения в ОТК  104 non-null    datetime64[ns]\n",
+      " 2   Период выявления                  204 non-null    object        \n",
+      " 3   Наименование изделия              204 non-null    object        \n",
+      " 4   Обозначение изделия               204 non-null    object        \n",
+      " 5   Заводской номер изделия           162 non-null    object        \n",
+      " 6   Дата изготовления изделия         36 non-null     object        \n",
+      " 7   Пробег, наработка                 97 non-null     object        \n",
+      " 8   Заявленный дефект                 204 non-null    object        \n",
+      " 9   Количество                        204 non-null    int16         \n",
       "dtypes: datetime64[ns](1), int16(1), object(8)\n",
-      "memory usage: 13.5+ KB\n"
+      "memory usage: 10.0+ KB\n"
      ]
     }
    ],
@@ -436,9 +438,9 @@
     "# Формируем отчет за период ... df_res = df_c.loc[3:].groupby(\n",
     "df_res = df_c.groupby(\n",
     "    [\n",
-    "        \"Период выявления\", \n",
-    "        \"Наименование изделия\", \n",
-    "        \"Обозначение изделия\", \n",
+    "        \"Период выявления\",\n",
+    "        \"Наименование изделия\",\n",
+    "        \"Обозначение изделия\",\n",
     "        \"Заявленный дефект\"\n",
     "    ]\n",
     ")[\"Количество\"].sum().to_frame()  # agg('count').to_frame().rename(columns={\"Месяц регистрации\": \"Количество\"})"
@@ -919,7 +921,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base_venv",
+   "display_name": "analys_base_venv",
    "language": "python",
    "name": "python3"
   },
@@ -933,7 +935,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.8.2"
   },
   "orig_nbformat": 4
  },
