Изменение пректа подготовки справки

--- a/Аналитика_базы_данных/Working_files/Справка по рекламациям за период.ipynb
+++ b/Аналитика_базы_данных/Working_files/Справка по рекламациям за период.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
    "source": [
     "# ---------------- База данных приложения - словарь номеров строк базы ОТК по которым формировались отчеты ------------------\n",
     "# база данных номеров строк располагается в каталоге проекта или приложения\n",
-    "database = \"./Справка по рекламациям за период_база данных.txt\"\n",
+    "database = \"//Server/otk/Support_files_не_удалять!!!/Справка по рекламациям за период_база данных.txt\"\n",
     "\n",
     "# База ОТК начинается со строки с номером 3. В начале года база ОТК пустая, поэтому ДЕФОЛТНЫЙ словарь\n",
     "# имеет вид {\"0\": [\"3\", \"08-01-2025\"]}, где \"0\" - ключ словаря (порядковый номер записи в словаре),\n",
@@ -68,20 +68,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "year_now = datetime.today().year  # текущий год\n",
     "\n",
     "# имя файла базы рекламаций ОТК с учетом текущего года\n",
-    "file = \"//Server/otk/1 ГАРАНТИЯ на сервере/\" + str(year_now) + \"-2019_ЖУРНАЛ УЧЁТА.xlsm\"\n",
+    "file = f\"//Server/otk/1 ГАРАНТИЯ на сервере/{year_now}-2019_ЖУРНАЛ УЧЁТА.xlsm\"\n",
     "# file = f\"{str(year_now)}-2019_ЖУРНАЛ УЧЁТА.xlsm\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -859,7 +859,7 @@
        "210                             течь           1  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
