--- a/Аналитика_базы_данных/Finish_files/Справка по рекламациям за период.ipynb
+++ b/Аналитика_базы_данных/Finish_files/Справка по рекламациям за период.ipynb
@@ -59,7 +59,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Удаляем строки в которых нет информации \n",
+    "# Удаляем строки в которых нет информации\n",
     "df_c = df.dropna(subset=[\"Период выявления дефекта (отказа)\"])"
    ]
   },
@@ -89,11 +89,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Формируем отчет за период \n",
+    "# Формируем отчет за период\n",
     "df_res = df_c.loc[1147:].groupby(\n",
     "    [\n",
-    "        \"Период выявления дефекта (отказа)\", \n",
-    "        \"Наименование изделия\", \n",
+    "        \"Период выявления дефекта (отказа)\",\n",
+    "        \"Наименование изделия\",\n",
     "        \"Обозначение изделия\"\n",
     "    ]\n",
     ")[\"Месяц регистрации\"].agg('count').to_frame().rename(columns={\"Месяц регистрации\": \"Количество\"})"
@@ -296,7 +296,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.2 ('base_venv': venv)",
+   "display_name": "analys_base_venv",
    "language": "python",
    "name": "python3"
   },
@@ -312,12 +312,7 @@
    "pygments_lexer": "ipython3",
    "version": "3.8.2"
   },
-  "orig_nbformat": 4,
-  "vscode": {
-   "interpreter": {
-    "hash": "879bcfca1c9c4d8762be18e1e3486d9f9be337292eb3573feb891f4e6ef4740f"
-   }
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
